external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_range_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W04039]: unable to determine principal type for literal
  ┌─ tests/move_check/parser/spec_parsing_range_fail.move:3:15
  │
3 │       let _ = 1 .. 2;
  │               ^ Could not determine a concrete type for this numeric literal, so defaulting to 'u64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>u64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/parser/spec_parsing_range_fail.move:3:17
  │
3 │       let _ = 1 .. 2;
  │                 ^^ Specification-only operator is not supported
